--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
   wordpress:
     depends_on:
       - db
-    image: sunilkumar06/project_wordpress:latest
+    image: jacksneel/wp-project:latest
     ports:
       - "80:80"
     environment:
