--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -1,8 +1,8 @@
 - name: TestDockercontainercreation
-  hosts: docker-vm
+  hosts: docker-server
   tasks:
-        -name: Run the Docker bulid
-         shell: docker-compose -f /root/docker-compose.yaml build --no-cache
+        - name: Run the Docker bulid
+          shell: docker-compose -f /root/docker-compose.yaml build --no-cache
 
-        -name: RuntheDockercontainer
-         shell: docker-compose -f /root/docker-compose.yaml up -d
+        - name: RuntheDockercontainer
+          shell: docker-compose -f /root/docker-compose.yaml up -d
